--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: minima
-title: blog
-author: dnk
-description: personal use
+title: DNK — Engineering Notes
+author: DNK
+description: Notes on building, shipping, and learning in public.
+show_excerpts: true
